# android-cv-assessment

./: README.md  gradle.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: CameraGLRenderer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  main.js  main.ts
